--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SOAR Bio — Biotech Adventure Studio</title>
-  <meta name="description" content="SOAR Bio is a therapeutics-focused adventure studio. We launch and operate new biotech companies via Soar Biolabs and fund them via Soar BioVentures." />
-  <meta property="og:title" content="SOAR Bio — Biotech Adventure Studio" />
-  <meta property="og:description" content="Therapeutics-first. Company-building engine. Operated by Soar Biolabs, funded by Soar BioVentures." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://soar.bio" />
-  <meta property="og:image" content="https://soar.bio/assets/images/image01.jpg" />
+  <title>SOAR Biolabs — Therapeutics Venture Studio</title>
+  <meta name="description" content="SOAR Biolabs is a therapeutics-focused venture studio creating and scaling new biotech companies, funded in partnership with Soar BioVentures." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css" />
-  <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
+  <link rel="stylesheet" href="./assets/style.css" />
+  <link rel="icon" href="./assets/img/favicon.svg" type="image/svg+xml" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="#top" aria-label="SOAR Bio home">
-      <img src="https://soar.bio/assets/images/image01.jpg" alt="SOAR Bio logo" height="48" />
+    <a class="brand" href="#top" aria-label="SOAR Biolabs home">
+      <img src="./assets/img/soar-biolabs.svg" alt="SOAR Biolabs logo" />
     </a>
     <nav class="nav">
       <a href="#thesis">Thesis</a>
-      <a href="#arms">Structure</a>
+      <a href="#workflow">Workflow</a>
       <a href="#portfolio">Spinouts</a>
       <a href="#team">Team</a>
       <a href="#contact" class="cta">Contact</a>
@@ -35,11 +30,16 @@
 <main id="top">
   <section class="hero">
     <div class="container">
-      <h1><span class="grad">SOAR Bio</span> is a therapeutics-first adventure studio.</h1>
-      <p class="lede">We discover, incubate, and launch novel therapies. Companies are built and operated by <strong>Soar Biolabs</strong> and funded in partnership with <strong>Soar BioVentures</strong>.</p>
+      <p class="subtle">An adventure studio focused on therapeutics</p>
+      <h1><span class="grad">SOAR Biolabs</span> creates and scales biotech companies.</h1>
+      <p class="lede">We pair differentiated biology with pragmatic clinical paths. Companies are built by <strong>Soar Biolabs</strong> and funded in partnership with <strong>Soar BioVentures</strong>. Based in the greater Washington / DMV region.</p>
       <div class="hero-ctas">
         <a class="button primary" href="#contact">Partner with us</a>
         <a class="button ghost" href="#thesis">Our thesis</a>
+      </div>
+      <div class="logos">
+        <img src="./assets/img/soar-biolabs.svg" alt="Soar Biolabs logo">
+        <img src="./assets/img/soar-bioventures.svg" alt="Soar BioVentures logo">
       </div>
       <div class="hero-badges">
         <div class="badge">Therapeutics</div>
@@ -54,7 +54,7 @@
     <div class="container grid-2">
       <div>
         <h2>Thesis</h2>
-        <p>We build therapeutics companies by pairing differentiated biology with pragmatic clinical paths. Our studio model compresses time from discovery to value inflection by standardizing company formation, early operating systems, and capital orchestration.</p>
+        <p>We build therapeutics companies by compressing the path from discovery to value inflection. Our studio model standardizes company formation, early operating systems, and milestone-based financing.</p>
         <ul class="checklist">
           <li>Area focus: <strong>therapeutics</strong> and enabling platforms</li>
           <li>Stage: pre-seed to Series A, asset-first or platform-led</li>
@@ -63,27 +63,29 @@
         </ul>
       </div>
       <div class="card">
-        <img class="workflow" src="assets/img/workflow.svg" alt="SOAR Bio workflow diagram">
-        <caption class="caption">Company-building workflow from selection → incubation → spinout → scale</caption>
+        <div class="workflow-wrap">
+          <img src="./assets/img/workflow.svg" alt="Company-building workflow" />
+        </div>
+        <div class="caption">Selection → Incubation → Spinout → Scale & Partnering</div>
       </div>
     </div>
   </section>
 
-  <section id="arms" class="section alt">
+  <section id="workflow" class="section alt">
     <div class="container">
       <h2>Structure</h2>
       <div class="cards">
         <article class="card">
-          <h3>SOAR Bio</h3>
-          <p>The adventure studio: sourcing, diligence, and repeatable company-building infrastructure.</p>
+          <img src="./assets/img/soar-biolabs.svg" alt="SOAR Biolabs" style="height:32px;">
+          <p>The venture studio: sourcing, diligence, and repeatable company‑building infrastructure.</p>
         </article>
         <article class="card">
-          <h3>Soar Biolabs (LLC)</h3>
-          <p>Operating arm that forms and runs NewCos until leadership is installed and milestones are met.</p>
+          <img src="./assets/img/soar-bioventures.svg" alt="Soar BioVentures" style="height:32px;">
+          <p>Capital partner that funds studio projects and spinouts; collaborates with co‑investors.</p>
         </article>
         <article class="card">
-          <h3>Soar BioVentures (Partnership)</h3>
-          <p>Capital partner that funds studio projects and spinouts; collaborates with co-investors.</p>
+          <img src="./assets/img/wordmark.svg" alt="SOAR Bio wordmark" style="height:32px;">
+          <p>Brand umbrella and network. The current focus is the venture creation engine.</p>
         </article>
       </div>
     </div>
@@ -92,27 +94,46 @@
   <section id="portfolio" class="section">
     <div class="container">
       <h2>Spinouts</h2>
-      <p class="muted">Sample placeholders — we’ll replace with your real portfolio.</p>
-      <div class="logos">
-        <div class="logo-card">NewCo Alpha</div>
-        <div class="logo-card">NewCo Beta</div>
+      <p class="muted">Sample placeholders — replace with portfolio companies.</p>
+      <div class="logos-grid">
+        <div class="logo-card">Lysin Therapeutics</div>
+        <div class="logo-card">Bifunctional SM Platform</div>
         <div class="logo-card">NewCo Gamma</div>
       </div>
     </div>
   </section>
 
   <section id="team" class="section alt">
-    <div class="container grid-2">
-      <div>
-        <h2>Team</h2>
-        <p>We’re operators, scientists, and company builders. Short bios and advisors can go here—including links to LinkedIn, Google Scholar, and past exits.</p>
-      </div>
-      <div class="card">
-        <ul class="profiles">
-          <li><strong>Founder Name</strong> — Managing Partner</li>
-          <li><strong>Partner Name</strong> — Research & BD</li>
-          <li><strong>Operating Partner</strong> — Biolabs</li>
-        </ul>
+    <div class="container">
+      <h2>Founders</h2>
+      <div class="team-grid">
+        <article class="team-card">
+          <img src="./assets/img/founders/murat.svg" alt="Founder photo placeholder">
+          <h3>Murat Kalayoglu, MD, PhD</h3>
+          <div class="team-role">Co‑Founder</div>
+          <ul class="team-bullets">
+            <li>Repeat founder‑manager; exits to AbbVie and Biohaven; public listings (KYMR, RNAC).</li>
+            <li>Focus: translational strategy, clinical development, BD.</li>
+          </ul>
+        </article>
+        <article class="team-card">
+          <img src="./assets/img/founders/michael.svg" alt="Founder photo placeholder">
+          <h3>Michael Singer, MD, PhD</h3>
+          <div class="team-role">Co‑Founder</div>
+          <ul class="team-bullets">
+            <li>Physician‑scientist and company builder with multiple successful exits.</li>
+            <li>Focus: pipeline strategy, partnerships, company formation.</li>
+          </ul>
+        </article>
+        <article class="team-card">
+          <img src="./assets/img/founders/david.svg" alt="Founder photo placeholder">
+          <h3>David Spiegel, MD, PhD</h3>
+          <div class="team-role">Co‑Founder</div>
+          <ul class="team-bullets">
+            <li>Serial entrepreneur; co‑founded Kleo Pharmaceuticals (acq. Biohaven).</li>
+            <li>Focus: drug discovery, platform design, scientific leadership.</li>
+          </ul>
+        </article>
       </div>
     </div>
   </section>
@@ -120,7 +141,7 @@
   <section id="contact" class="section">
     <div class="container">
       <h2>Contact</h2>
-      <p>Interested in partnering, co-founding, or sharing a program? Let’s talk.</p>
+      <p>Interested in partnering, co‑founding, or sharing a program? Let’s talk.</p>
       <form class="contact" action="https://formspree.io/f/your-id" method="POST">
         <label>
           Name
@@ -143,10 +164,10 @@
 
 <footer class="site-footer">
   <div class="container footer-inner">
-    <div>© 2025 SOAR Bio · All rights reserved.</div>
+    <div>© 2025 SOAR Biolabs · All rights reserved.</div>
     <nav class="footer-nav">
       <a href="#thesis">Thesis</a>
-      <a href="#arms">Structure</a>
+      <a href="#workflow">Structure</a>
       <a href="#portfolio">Spinouts</a>
       <a href="#team">Team</a>
       <a href="#contact">Contact</a>
@@ -154,6 +175,6 @@
   </div>
 </footer>
 
-<script src="scripts/app.js"></script>
+<script src="./scripts/app.js"></script>
 </body>
 </html>
